# larq

./: .gitignore  leap.yaml  leap_binder.py  leap_mapping.yaml  pyproject.toml
cifar_example/: build_model.py  config.py  get_dataset.py  project_config.yaml  train_model.py
