[tool.poetry]
name = "larq"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.13.0"
code-loader = "^1.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
